--- a/Assignment 1.tex
+++ b/Assignment 1.tex
@@ -1,7 +1,7 @@
 \documentclass[l1pt,a4paper,two column]{article}
 \usepackage[utf8]{inputenc}
 
-\title{Assignment-1}
+\title{Assignment 1 - AI1103}
 \author{D.S.N. SANTOSH MS20BTECH11007}
 
 \date{}
@@ -28,7 +28,7 @@
 Download all python codes from 
 \\
 \begin{lstlisting}
-https://github.com/Santosh-Dhaladhuli2003/Assignment-1/blob/main/assigment_1.py
+https://github.com/Santosh-Dhaladhuli2003/AI1103-Assignment-1/blob/main/assigment_1.py
 \end{lstlisting}
 %
 %
@@ -38,7 +38,7 @@ Download all latex-tikz codes from
 %
 \\
 \begin{lstlisting}
-https://github.com/Santosh-Dhaladhuli2003/Assignment-1/blob/main/Assignment%201.tex
+https://github.com/Santosh-Dhaladhuli2003/AI1103-Assignment-1/blob/main/Assignment%201.tex
 \end{lstlisting}
    
 
