--- a/Assignment 1.tex
+++ b/Assignment 1.tex
@@ -208,5 +208,9 @@ P( X > 6) = P(X = 7) = 7k^2 + k \\
 \tag{4}              
     \therefore    P(0 < X < 3) = \frac{3}{10}
 \end{align}
-
+\begin{figure}[!htb]
+    \centering    
+	\includegraphics[width=\columnwidth]{probability.png}
+    \caption{Probability graph}
+\end{figure}
 \end{document}
