--- a/Assignment 1.tex
+++ b/Assignment 1.tex
@@ -145,7 +145,6 @@ https://github.com/Santosh-Dhaladhuli2003/AI1103-Assignment-1/blob/main/Assignme
 Random Variable X has the following Probability Distribution \\
 \begin{table}[h]
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
-
 \hline
 X    & 0 & 1 & 2  & 3  & 4  & 5   & 6  & 7                     \\ \hline    
 P(X) & 0 & k & 2k & 2k & 3k & $k^2$ & $2k^2$ & $7k^2$ + k \\ 
@@ -160,10 +159,10 @@ Determine:
 \item P(X $>$ 6)  
 \item P(0 $<$ X $<$ 3) 
 \end{enumerate}
-
 \section*{Solution}
-1)
-It is known that the sum of probabilities of a probability distribution is always one.
+
+\begin{enumerate}
+    \item It is known that the sum of probabilities of a probability distribution is always one. 
 \begin{align}
 \tag{5.12.1}
     \therefore 0 + k + 2k + 3k + k^2 + 2k^2 + (7k^2 + k) = 1 
@@ -181,29 +180,23 @@ It is known that the sum of probabilities of a probability distribution is alway
     \tag{1}
  \therefore k = \frac{1}{10} (\because k \ge 0)
  \end{equation}
-2)
-\begin{align}
+\item P(X $<$ 3) = P(X = 2) + P(X = 1) + P(X = 0)
+ \begin{align}
 \tag{5.12.4}
-P(X < 3) = P(X = 2) + P(X = 1) + P(X = 0) \\
-\tag{5.12.5}
 \implies  P(X < 3) = 0 + k + 2k = 3k \\
 \tag{2}
 \therefore  P(X < 3) = \frac{3}{10} 
-   \end{align}
-3)
-\begin{align}
-\tag{5.12.6}
-P( X > 6) = P(X = 7) = 7k^2 + k \\
-\tag{5.12.7}
+   \end{align} 
+ \item P( X $>$ 6) = P(X = 7) = 7$k^2$ + k 
+ \begin{align}
+\tag{5.12.5}
 \implies  P(X > 6)  = \frac{7}{100} + \frac{1}{10} \\
 \tag{3}
 \therefore P(X > 6) = \frac{17}{100} 
 \end{align}
-4) 
+\item P(0 $<$ X $<$ 3) = P(X = 1) + P(X = 2)  
 \begin{align}
-\tag{5.12.8}
- P(0 < X < 3) = P(X = 1) + P(X = 2)  \\
- \tag{5.12.9}
+ \tag{5.12.6}
               \implies   P(0 < X < 3) = k + 2k = 3k\\
 \tag{4}              
     \therefore    P(0 < X < 3) = \frac{3}{10}
@@ -213,4 +206,5 @@ P( X > 6) = P(X = 7) = 7k^2 + k \\
 	\includegraphics[width=\columnwidth]{probability.png}
     \caption{Probability graph}
 \end{figure}
+\end{enumerate}
 \end{document}
