--- a/Assignment 1.tex
+++ b/Assignment 1.tex
@@ -200,12 +200,14 @@ Determine:
     \centering    
 	\includegraphics[width=\columnwidth]{pmf.png}
     \caption{Probability Mass Function(PMF)}
+    \label{Fig:1}
 \end{figure}
 
 \begin{figure}[!htb]
     \centering    
 	\includegraphics[width=\columnwidth]{cdf.png}
     \caption{Cumulative Distribution Function(CDF)}
+    \label{Fig:2}
 \end{figure}
  \begin{table}[]
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
