--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -156,4 +156,8 @@ remaining days = 366 - 364 \\
 The 53\textsuperscript{rd} Saturday can occur at the remaining 2 days. \\
 $\therefore$ The Probability of 53 Saturdays in a leap year = $\frac{2}{7}$ \\
 The correct answer is \textbf{Option A}
+\begin{figure}[htb]
+\centering
+\includegraphics[width=9.75cm]{Assignment 2.png}
+\end{figure}
 \end{document}
