--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -153,7 +153,9 @@ No of complete weeks in a leap year = $\floor{\frac{366}{7}}$ = 52 \\
 $\therefore$ We Define, X $\in$ {[52,53]} \\
 $\pr{X = 52} \longrightarrow$ denotes for 52 Saturdays \\
 $\pr{X = 53} \longrightarrow$ denotes for 53 Saturdays \\
- $\implies$ Remaining Days = 366 - (52 \times 7) = 2 
+ $\implies$ Remaining Days = 366 - (52 \times 7) = 2 \\
+ \implies\pr{X = 53} = \frac{2}{7} \\
+ $\therefore$ The correct answer is \textbf{Option A}
 
 \begin{figure}[h]
 \centering
