--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -150,15 +150,15 @@ What is the chance that a leap year,selected at random,will contain 53 Saturdays
 Let X be a random variable that denotes the number of Saturdays in a leap year. \\
 $\implies$ No of days in a leap year = 366 Days
 No of complete weeks in a leap year = $\floor{\frac{366}{7}}$ = 52 \\
-$\therefore$ We Define, X $\in$ {[52,53]} \\
-$\pr{X = 52} \longrightarrow$ denotes for 52 Saturdays \\
-$\pr{X = 53} \longrightarrow$ denotes for 53 Saturdays \\
+$\therefore$ We Define, X $\in$ {{0,1}} \\
+$\pr{X = 0} \longrightarrow$ denotes for 52 Saturdays \\
+$\pr{X = 1} \longrightarrow$ denotes for 53 Saturdays \\
  $\implies$ Remaining Days = 366 - (52 \times 7) = 2 \\
- \implies\pr{X = 53} = \frac{2}{7} \\
+ \implies\pr{X = 1} = \frac{2}{7} \\
  $\therefore$ The correct answer is \textbf{Option A}
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.5\textwidth]{AI1103 3.png}
+\includegraphics[width=0.5\textwidth]{Assignment 2 AI1103.png}
 \end{figure}
 \end{document}
