--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -128,7 +128,7 @@ columns=fullflexible
 
 Download all latex codes from 
 \begin{lstlisting}
-https://github.com/Santosh-Dhaladhuli2003/AI1103/blob/main/Assignment%202/Assignment%202.tex
+https://github.com/Santosh-Dhaladhuli2003/AI1103/blob/main/Assignment%203/Assignment%203.tex
 \end{lstlisting}
 \section{\textbf{GATE MA 2005 Question No. 25}}
 Let $A_{1},A_{2},.....A_{n}$ be n independent events in which the Probability of occurence of the event $A_{i}$ is given by P($A_{i}$) = 1 - $\frac{1}{\alpha^i}$, $\alpha >1$, i = 1,2,3,....n.Then the probability that atleast one of the events occurs is
@@ -159,13 +159,14 @@ $\implies$
 \end{equation}
 \begin{equation}
     \tag{2.2}
-\pr{A_{i}} = 1 - \frac{1}{\alpha^i} \implies \pr{A_{1}^\complement} = \frac{1}{\alpha^i}
+\pr{A_{i}} = 1 - \frac{1}{\alpha^i} \implies \pr{A_{i}^\complement} = \frac{1}{\alpha^i}
 \end{equation}
 \begin{equation}
     \tag{2.3}
 \text{Let,} x = \sum_{i=1}^{n}i
 \implies x = \frac{n(n+1)}{2}
 \end{equation}
+from equations (1.1), (1.2) and (2.2)
 \begin{equation}
 \tag{2.4}
 \implies \pr{S} = 1 - \frac{1}{\alpha^x} = 1 - \frac{1}{\alpha^\frac{n(n+1)}{2}}
