--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -148,7 +148,7 @@ What is the chance that a leap year,selected at random,will contain 53 Saturdays
 
 \section{\textbf{Solution}}
 Let X be a random variable that denotes the number of Saturdays in a leap year. \\
-$\implies$ No of days in a leap year = 366 Days
+$\implies$ No of days in a leap year = 366 Days \\
 No of complete weeks in a leap year = $\floor{\frac{366}{7}}$ = 52 \\
 $\therefore$ We Define, X $\in$ {{0,1}} \\
 $\pr{X = 0} \longrightarrow$ denotes for 52 Saturdays \\
