--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -147,10 +147,8 @@ What is the chance that a leap year,selected at random,will contain 53 Saturdays
   \end{inparaenum}
 
 \section{\textbf{Solution}}
-Let X be a random variable that denotes the number of Saturdays in a leap year. \\
-$\implies$ No of days in a leap year = 366 Days \\
-No of complete weeks in a leap year = $\floor{\frac{366}{7}}$ = 52 \\
-$\therefore$ We Define, X $\in$ {{0,1}} \\
+Let X be a random variable \\
+ We Define, X $\in$ {{0,1}} \\
 $\pr{X = 0} \longrightarrow$ denotes for 52 Saturdays \\
 $\pr{X = 1} \longrightarrow$ denotes for 53 Saturdays \\
  $\implies$ Remaining Days = 366 - (52 \times 7) = 2 \\
