--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -161,7 +161,7 @@ $\implies$
 \end{equation}
 \begin{equation}
     \tag{2.2}
-\pr{A_{i}} = 1 - \frac{1}{\alpha^i} \implies \pr{A_{i}^\complement} = \frac{1}{\alpha^i}
+\pr{A_{i}} = 1 - \frac{1}{\alpha^i} \implies \pr{A_{i}^\prime} = \frac{1}{\alpha^i}
 \end{equation}
 \begin{equation}
     \tag{2.3}
