--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -152,7 +152,9 @@ De morgan's law states that $(A + B)^\prime = A^\prime B^\prime$
    1 - \pr{S^\prime}= 1 - \pr{A_{1}^\prime A_{2}^\prime A_{3}^\prime
    ....A_{n}^\prime}
 \end{align}
-Since,$A_{1},A_{2},.....A_{n}$ are independent.Complements of $A_{1},A_{2},.....A_{n}$ are also independent. \\
+$\forall$ i $\in$ {1,2,....n} \\
+Since, $A_{i}$ are independent.\\
+$\therefore$ Complements of $A_{i}$ are also independent.\\
 $\implies$ 
 \begin{equation}
 \tag{2.1}
@@ -176,7 +178,7 @@ substituting (2.2) in (2.1),
 \tag{2.5}
     \therefore \pr{A_{1}^\prime A_{2}^\prime A_{3}^\prime ....A_{n}^\prime} = \pr{S^\prime} = \frac{1}{\alpha^\frac{n(n+1)}{2}}
 \end{equation}
-from equations (1.1), (1.2), (2.1) and (2.2)
+from equations (1.2) and (2.5) 
 \begin{equation}
 \tag{2.6}
 \implies \pr{S} = 1 - \pr{S^\prime} = 1 - \frac{1}{\alpha^\frac{n(n+1)}{2}}
