--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -157,11 +157,11 @@ Let X be a random variable \\
 P(X = 0) & denotes for 52 Saturday  \\ \hline
 P(X = 1) & denotes for 53 Saturdays \\ \hline
 \end{tabular}
+\caption{\pr{X = x}}
 \end{table}
- $\implies$ Remaining Days = 366 - (52 \times 7) = 2 \\
+ $\implies$ Remaining Days = 366 - 364 = 2 \\
  \implies\pr{X = 1} = \frac{2}{7} \\
  $\therefore$ The correct answer is \textbf{Option A}
-
 \begin{figure}[!htb]
 \centering
 \includegraphics[width=0.45\textwidth]{Assignment 2 AI1103.png}
