--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -145,8 +145,6 @@ What is the chance that a leap year,selected at random,will contain 53 Saturdays
     \item  $\frac{1}{7}$ 
     \item  $\frac{5}{7}$ 
 \end{enumerate}
-    
-  
 
 \section{\textbf{Solution}}
 Let X be a random variable \\
@@ -159,8 +157,14 @@ P(X = 1) & denotes for 53 Saturdays \\ \hline
 \end{tabular}
 \caption{\pr{X = x}}
 \end{table}
- $\implies$ Remaining Days = 366 - 364 = 2 \\
- \implies\pr{X = 1} = \frac{2}{7} \\
+\begin{equation}
+\tag{1}
+    \implies \text{Remaining Days} = 366 - 364 = 2
+\end{equation}
+\begin{equation}
+\tag{2}
+\implies\pr{X = 1} = \frac{2}{7}
+\end{equation}
  $\therefore$ The correct answer is \textbf{Option A}
 \begin{figure}[!htb]
 \centering
