--- a/Assignment 4/Assignment 4.tex
+++ b/Assignment 4/Assignment 4.tex
@@ -152,16 +152,27 @@ The probabilities that a student passes in Mathematics, Physics and Chemistry ar
 \end{enumerate}
 
 \section{\textbf{Solution}}
+\begin{table}[h]
+\begin{tabular}{|l|l|}
+\hline
+p & Probability of passing in physics     \\ \hline
+m & Probability of passing in mathematics \\ \hline
+c & probability of passing in chemistry   \\ \hline
+\end{tabular}
+\caption{Probabilty of passing}
+\end{table}
 Let X be a Random variable that denotes number of subjects the student passes. \\
 So, X $\in$ {0,1,2,3} \\
 Given,
 \begin{table}[h]
+\centering
 \begin{tabular}{|l|l|}
 \hline
 P(X $\ge$ 1) & 0.75 \\ \hline
 P(X $\ge$ 2) & 0.50 \\ \hline
 P(X = 2)   & 0.40 \\ \hline
 \end{tabular}
+\caption{P(X)}
 \end{table}
 \begin{equation}
 \tag{1.1}
