--- a/Assignment 7/Assignment 7.tex
+++ b/Assignment 7/Assignment 7.tex
@@ -1,1 +1,219 @@
-2
+\documentclass[journal,12pt,twocolumn]{IEEEtran}
+
+\usepackage{setspace}
+\usepackage{paralist}
+\usepackage{gensymb}
+\singlespacing
+\usepackage[cmex10]{amsmath}
+
+\usepackage{amsthm}
+\usepackage{amssymb}
+
+\usepackage{mathrsfs}
+\usepackage{txfonts}
+\usepackage{stfloats}
+\usepackage{bm}
+\usepackage{cite}
+\usepackage{cases}
+\usepackage{subfig}
+
+\usepackage{longtable}
+\usepackage{multirow}
+
+\usepackage{enumitem}
+\usepackage{mathtools}
+\usepackage{steinmetz}
+\usepackage{tikz}
+\usepackage{circuitikz}
+\usepackage{verbatim}
+\usepackage{tfrupee}
+\usepackage[breaklinks=true]{hyperref}
+\usepackage{graphicx}
+\usepackage{tkz-euclide}
+
+\usetikzlibrary{calc,math}
+\usepackage{listings}
+    \usepackage{color}                                            %%
+    \usepackage{array}                                            %%
+    \usepackage{longtable}                                        %%
+    \usepackage{calc}                                             %%
+    \usepackage{multirow}                                         %%
+    \usepackage{hhline}                                           %%
+    \usepackage{ifthen}                                           %%
+    \usepackage{lscape}     
+\usepackage{multicol}
+\usepackage{chngcntr}
+\usepackage{mathtools}
+\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
+
+\DeclareMathOperator*{\Res}{Res}
+
+\renewcommand\thesection{\arabic{section}}
+\renewcommand\thesubsection{\thesection.\arabic{subsection}}
+\renewcommand\thesubsubsection{\thesubsection.\arabic{subsubsection}}
+
+\renewcommand\thesectiondis{\arabic{section}}
+\renewcommand\thesubsectiondis{\thesectiondis.\arabic{subsection}}
+\renewcommand\thesubsubsectiondis{\thesubsectiondis.\arabic{subsubsection}}
+
+
+\hyphenation{op-tical net-works semi-conduc-tor}
+\def\inputGnumericTable{}                                 %%
+
+\lstset{
+%language=C,
+frame=single, 
+breaklines=true,
+columns=fullflexible
+}
+\begin{document}
+
+\newcommand{\BEQA}{\begin{eqnarray}}
+\newcommand{\EEQA}{\end{eqnarray}}
+\newcommand{\define}{\stackrel{\triangle}{=}}
+\bibliographystyle{IEEEtran}
+\raggedbottom
+\setlength{\parindent}{0pt}
+\providecommand{\mbf}{\mathbf}
+\providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
+\providecommand{\qfunc}[1]{\ensuremath{Q\left(#1\right)}}
+\providecommand{\sbrak}[1]{\ensuremath{{}\left[#1\right]}}
+\providecommand{\lsbrak}[1]{\ensuremath{{}\left[#1\right.}}
+\providecommand{\rsbrak}[1]{\ensuremath{{}\left.#1\right]}}
+\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
+\providecommand{\lbrak}[1]{\ensuremath{\left(#1\right.}}
+\providecommand{\rbrak}[1]{\ensuremath{\left.#1\right)}}
+\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
+\providecommand{\lcbrak}[1]{\ensuremath{\left\{#1\right.}}
+\providecommand{\rcbrak}[1]{\ensuremath{\left.#1\right\}}}
+\theoremstyle{remark}
+\newtheorem{rem}{Remark}
+\newcommand{\sgn}{\mathop{\mathrm{sgn}}}
+\providecommand{\abs}[1]{\vert#1\vert}
+\providecommand{\res}[1]{\Res\displaylimits_{#1}} 
+\providecommand{\norm}[1]{\lVert#1\rVert}
+%\providecommand{\norm}[1]{\lVert#1\rVert}
+\providecommand{\mtx}[1]{\mathbf{#1}}
+\providecommand{\mean}[1]{E[ #1 ]}
+\providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
+%\providecommand{\hilbert}{\overset{\mathcal{H}}{ \rightleftharpoons}}
+\providecommand{\system}{\overset{\mathcal{H}}{ \longleftrightarrow}}
+	%\newcommand{\solution}[2]{\textbf{Solution:}{#1}}
+\newcommand{\solution}{\noindent \textbf{Solution: }}
+\newcommand{\cosec}{\,\text{cosec}\,}
+\providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
+\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
+\newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
+\numberwithin{equation}{subsection}
+\makeatletter
+\@addtoreset{figure}{problem}
+\makeatother
+\let\StandardTheFigure\thefigure
+\let\vec\mathbf
+\renewcommand{\thefigure}{\theproblem}
+\def\putbox#1#2#3{\makebox[0in][l]{\makebox[#1][l]{}\raisebox{\baselineskip}[0in][0in]{\raisebox{#2}[0in][0in]{#3}}}}
+     \def\rightbox#1{\makebox[0in][r]{#1}}
+     \def\centbox#1{\makebox[0in]{#1}}
+     \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
+     \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
+\vspace{3cm}
+\title{\textbf{AI1103 : Assignment 7}}
+\author{\textbf{Santosh Dhaladhuli MS20BTECH11007}}
+\maketitle
+\newpage
+\bigskip
+\renewcommand{\thefigure}{\theenumi}
+\renewcommand{\thetable}{\theenumi}
+
+Download all latex codes from 
+\begin{lstlisting}
+https://github.com/Santosh-Dhaladhuli2003/AI1103/blob/main/Assignment%207/Assignment%207.tex
+\end{lstlisting}
+\section{\textbf{CSIR - UGC 2014 Dec Q.103}}
+Suppose X is a Random Variable such that E(X) = 0, E($X^2$) = 2 and E($X^4$)=4.Then
+
+\begin{enumerate}
+\item  E($X^3$)=0
+\item \pr{X \ge 0}= $\frac{1}{2}$
+\item X $\sim$ N(0,2) 
+\item \text{X is bounded with Probability} 1.
+\end{enumerate}
+
+\section{\textbf{Solution}}
+Let X be a Random variable. \\
+Compute Variance of $X^2$ 
+\begin{align*}
+    Var(X^2) &= E(X^4) - (E(X^2))^{2} \\
+             &=  4 - 2^2 \\
+             &= 0\\
+\tag{1} \label{Var(X^2)}   \implies Var(X^2) &= 0
+\end{align*}
+$\therefore$ X is a random variable such that $X^2$ is constant.\\
+\centering
+Given E($X^2$) = 2,
+\begin{align*}
+    E(X^2) &= \Sigma X^2\pr{X} \\
+           &= X^2\Sigma \pr{X}  \\
+           &= X^2 (\because \Sigma \pr{X} = 1) \\
+       X^2 &= 2 \\
+\tag{2} \label{X}
+\implies X &= \pm \sqrt{2}
+\end{align*}
+\centering
+Given E(X) = 0,
+\begin{align*}
+                      E(X) = \Sigma X\pr{X} = 0 \\
+                    \sqrt{2}\pr{X = \sqrt{2}}-\sqrt{2}\pr{X = -\sqrt{2}} = 0\\
+      \tag{3} \label{P(X)}
+\implies \pr{X = \sqrt{2}} = \pr{X = -\sqrt{2}}
+\end{align*}
+\centering
+Also, Sum of Probabilities is 1,
+\begin{align*}
+    \implies \pr{X = \sqrt{2}} + \pr{X =-\sqrt{2}} &= 1 \\
+    \tag{4} \label{X > 0}
+    \implies                     \pr{X = \sqrt{2}} &= \frac{1}{2} \\
+    \tag{5} \label{X < 0}
+    \implies                    \pr{X = -\sqrt{2}} &= \frac{1}{2}
+\end{align*}
+\centering
+\textbf{Option 1} says E($X^3$) = 0,
+\begin{align*}
+    E(X^3) &= \Sigma X^3 \pr{X} \\
+           &= X^2 .\Sigma X \pr{X} \\
+           &= X^2 E(X)\\
+\implies E(X^3) &= 0      
+\end{align*} 
+
+\centering \boxed{\text{\textbf{Option 1} is a \textbf{correct} answer}}
+\vspace{1cm} \\
+\textbf{Option 2} says $\pr{X \ge 0}$ = $\frac{1}{2}$,
+\begin{align*}
+    \pr{X\ge 0} &= \pr{X = \sqrt{2}} = \frac{1}{2} \\
+    \implies \pr{X \ge 0} &= \frac{1}{2}
+\end{align*}
+
+\centering \boxed{\text{\textbf{Option 2} is a \textbf{correct} answer}}
+\vspace{1cm} \\
+\textbf{Option 3} says X $\sim$ N(0,2),\\
+Let $\mu$ be the mean of X
+\begin{align*}
+            \mu &= E(X) \\
+    \tag{6} \label{mu}
+   \implies \mu &= 0 \\
+      \sigma^2 = Var(X) &= E(X^2) - (E(X))^{2} \\
+                &= 2 - (0)^{2} \\
+                \tag{7} \label{Var(X)}
+\implies Var(X) &= 2
+\implies N(\mu,\sigma^2) = N(0,2) \\
+\implies X &\sim N(0,2)
+\end{align*}
+\centering \boxed{\text{\textbf{Option 3} is a \textbf{correct} answer}}
+\pagebreak  \\
+\centering
+\textbf{Option 4} says X is bounded with probability 1, \\
+Equations \eqref{X > 0} and \eqref{X < 0} show that X $\in ({-\sqrt{2},\sqrt{2}})$ with Probability 1. 
+\vspace{0.5cm} \\
+\centering \boxed{\text{\textbf{Option 4} is a \textbf{correct} answer}}
+\end{document}
