--- a/Assignment 7/Assignment 7.tex
+++ b/Assignment 7/Assignment 7.tex
@@ -203,7 +203,7 @@ Also, Sum of Probabilities is 1,
 \begin{center}
     \boxed{\text{\textbf{Option 2} is a \textbf{correct} answer}}
 \end{center}
-\vspace{0.1cm} \\
+\vspace{0.1cm}
 \textbf{Option 3} says X $\sim$ N(0,2),
 Let $\mu$ be the mean of X
 \begin{align*}
