--- a/Assignment 7/Assignment 7.tex
+++ b/Assignment 7/Assignment 7.tex
@@ -216,14 +216,14 @@ Let $\mu$ be the mean of X
 \implies \sigma^2(X) &= 2
 \end{align*}
 But Random Variable X is defined for $\pm\sqrt{2}$ only.\\
-This means that distribution of X is not continuous,but discrete.
+Distribution of X is not continuous,but discrete.
 \vspace{0.3cm}
 \begin{center}
     \boxed{\text{\textbf{Option 3} is a \textbf{WRONG} answer}}
 \end{center}
 \vspace{0.3cm}
 \item \textbf{Option 4}: X is bounded with probability 1, \\
-Eq. \eqref{X > 0} and \eqref{X < 0} show that X $\in ({-\sqrt{2},\sqrt{2}})$ with Probability 1. 
+Eq. \eqref{X > 0} and \eqref{X < 0} show that X$\in$\{{$-\sqrt{2},\sqrt{2}$}\} with Probability 1. 
 \vspace{0.5cm} \\
 \centering \boxed{\text{\textbf{Option 4} is a \textbf{correct} answer}}
 \end{enumerate}
