--- a/Assignment 7/Assignment 7.tex
+++ b/Assignment 7/Assignment 7.tex
@@ -157,7 +157,10 @@ If E(Z) = 0 then it means Z = 0
   \tag{*}
   X^2 &= E(X^2) = 2
 \end{align*}
-$\therefore$ X is a random variable such that $X^2$ is constant.\\
+\begin{center}
+
+    \boxed {\textbf{$X^2$ is constant.}} \\
+\end{center}
 Given E($X^2$) = 2,
 \begin{align*}
     E(X^2) &= \Sigma X^2\pr{X} \\
@@ -187,7 +190,7 @@ Also, Sum of Probabilities is 1,
 \item \textbf{Option 1}: E($X^3$) = 0,
 \begin{align*}
     E(X^3) &= \Sigma X^3 \pr{X} \\
-           &= X^2 .\Sigma X \pr{X} \\
+           &= X^2 .\Sigma X \pr{X} (\because X^2 \text{ is constant}) \\
            &= X^2 E(X)\\
 \implies E(X^3) &= 0      
 \end{align*} 
