--- a/Assignment 6/Assignment 6.tex
+++ b/Assignment 6/Assignment 6.tex
@@ -1,1 +1,190 @@
-1
+\documentclass[journal,12pt,twocolumn]{IEEEtran}
+
+\usepackage{setspace}
+\usepackage{paralist}
+\usepackage{gensymb}
+\singlespacing
+\usepackage[cmex10]{amsmath}
+
+\usepackage{amsthm}
+\usepackage{amssymb}
+
+\usepackage{mathrsfs}
+\usepackage{txfonts}
+\usepackage{stfloats}
+\usepackage{bm}
+\usepackage{cite}
+\usepackage{cases}
+\usepackage{subfig}
+
+\usepackage{longtable}
+\usepackage{multirow}
+
+\usepackage{enumitem}
+\usepackage{mathtools}
+\usepackage{steinmetz}
+\usepackage{tikz}
+\usepackage{circuitikz}
+\usepackage{verbatim}
+\usepackage{tfrupee}
+\usepackage[breaklinks=true]{hyperref}
+\usepackage{graphicx}
+\usepackage{tkz-euclide}
+
+\usetikzlibrary{calc,math}
+\usepackage{listings}
+    \usepackage{color}                                            %%
+    \usepackage{array}                                            %%
+    \usepackage{longtable}                                        %%
+    \usepackage{calc}                                             %%
+    \usepackage{multirow}                                         %%
+    \usepackage{hhline}                                           %%
+    \usepackage{ifthen}                                           %%
+    \usepackage{lscape}     
+\usepackage{multicol}
+\usepackage{chngcntr}
+\usepackage{mathtools}
+\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
+
+\DeclareMathOperator*{\Res}{Res}
+
+\renewcommand\thesection{\arabic{section}}
+\renewcommand\thesubsection{\thesection.\arabic{subsection}}
+\renewcommand\thesubsubsection{\thesubsection.\arabic{subsubsection}}
+
+\renewcommand\thesectiondis{\arabic{section}}
+\renewcommand\thesubsectiondis{\thesectiondis.\arabic{subsection}}
+\renewcommand\thesubsubsectiondis{\thesubsectiondis.\arabic{subsubsection}}
+
+
+\hyphenation{op-tical net-works semi-conduc-tor}
+\def\inputGnumericTable{}                                 %%
+
+\lstset{
+%language=C,
+frame=single, 
+breaklines=true,
+columns=fullflexible
+}
+\begin{document}
+
+\newcommand{\BEQA}{\begin{eqnarray}}
+\newcommand{\EEQA}{\end{eqnarray}}
+\newcommand{\define}{\stackrel{\triangle}{=}}
+\bibliographystyle{IEEEtran}
+\raggedbottom
+\setlength{\parindent}{0pt}
+\providecommand{\mbf}{\mathbf}
+\providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
+\providecommand{\qfunc}[1]{\ensuremath{Q\left(#1\right)}}
+\providecommand{\sbrak}[1]{\ensuremath{{}\left[#1\right]}}
+\providecommand{\lsbrak}[1]{\ensuremath{{}\left[#1\right.}}
+\providecommand{\rsbrak}[1]{\ensuremath{{}\left.#1\right]}}
+\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
+\providecommand{\lbrak}[1]{\ensuremath{\left(#1\right.}}
+\providecommand{\rbrak}[1]{\ensuremath{\left.#1\right)}}
+\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
+\providecommand{\lcbrak}[1]{\ensuremath{\left\{#1\right.}}
+\providecommand{\rcbrak}[1]{\ensuremath{\left.#1\right\}}}
+\theoremstyle{remark}
+\newtheorem{rem}{Remark}
+\newcommand{\sgn}{\mathop{\mathrm{sgn}}}
+\providecommand{\abs}[1]{\vert#1\vert}
+\providecommand{\res}[1]{\Res\displaylimits_{#1}} 
+\providecommand{\norm}[1]{\lVert#1\rVert}
+%\providecommand{\norm}[1]{\lVert#1\rVert}
+\providecommand{\mtx}[1]{\mathbf{#1}}
+\providecommand{\mean}[1]{E[ #1 ]}
+\providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
+%\providecommand{\hilbert}{\overset{\mathcal{H}}{ \rightleftharpoons}}
+\providecommand{\system}{\overset{\mathcal{H}}{ \longleftrightarrow}}
+	%\newcommand{\solution}[2]{\textbf{Solution:}{#1}}
+\newcommand{\solution}{\noindent \textbf{Solution: }}
+\newcommand{\cosec}{\,\text{cosec}\,}
+\providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
+\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
+\newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
+\numberwithin{equation}{subsection}
+\makeatletter
+\@addtoreset{figure}{problem}
+\makeatother
+\let\StandardTheFigure\thefigure
+\let\vec\mathbf
+\renewcommand{\thefigure}{\theproblem}
+\def\putbox#1#2#3{\makebox[0in][l]{\makebox[#1][l]{}\raisebox{\baselineskip}[0in][0in]{\raisebox{#2}[0in][0in]{#3}}}}
+     \def\rightbox#1{\makebox[0in][r]{#1}}
+     \def\centbox#1{\makebox[0in]{#1}}
+     \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
+     \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
+\vspace{3cm}
+\title{\textbf{AI1103 : Assignment 6}}
+\author{\textbf{Santosh Dhaladhuli MS20BTECH11007}}
+\maketitle
+\newpage
+\bigskip
+\renewcommand{\thefigure}{\theenumi}
+\renewcommand{\thetable}{\theenumi}
+
+Download all latex codes from 
+\begin{lstlisting}
+https://github.com/Santosh-Dhaladhuli2003/AI1103/blob/main/Assignment%206/Assignment%206.tex
+\end{lstlisting}
+\section{\textbf{GATE ST 2021 Q.1 st. section}}
+Let X be a non-constant positive Random Variable such that $E(X) = 9$.\\
+Then which of the following statements is True?
+
+\begin{enumerate}
+\item  $E\brak{\frac{1}{X+1}} > 0.1$ and $\pr{X \ge 10} \le 0.9$
+\item   $E\brak{\frac{1}{X+1}} < 0.1$ and $\pr{X \ge 10} \le 0.9$
+\item   $E\brak{\frac{1}{X+1}} > 0.1$ and $\pr{X \ge 10} > 0.9$
+\item   $E\brak{\frac{1}{X+1}} < 0.1$ and $\pr{X \ge 10} > 0.9$
+\end{enumerate}
+
+\section{\textbf{Solution}}
+Given, for X $>$ 0 ,$E(X) = 9$, $E\brak{\frac{1}{X+1}}$ can be estimated by Jensens's Inequality. \\
+\textbf{pre - requisites:}\\
+In general, $\phi(X)$ is a convex function iff:
+\begin{equation*}
+    \frac{d^2 \phi}{dX^2} \ge 0
+\end{equation*}
+\textbf{Jensen's Inequality:}\\
+In the context of probability theory, it is generally stated in the following form: if X is a random variable and $\phi$ is a convex function, then
+\begin{equation*}
+\tag{1} \label{jenson}
+    \phi(E(X)) \le E(\phi(X))
+\end{equation*}
+\begin{align*}
+    \text{So for } \phi(X) &= \frac{1}{X+1}, \\
+                \frac{d\phi}{dX} &= - \frac{1}{(X+1)^{2}} \\
+                \tag{2} \label{phi}
+                \frac{d^2 \phi}{dX^2} &= \frac{2}{(X+1)^{3}} 
+    \implies \frac{d^2 \phi}{dX^2} \ge 0,(\because X>0 )
+\end{align*}
+by eq \eqref{jenson} and \eqref{phi}
+\begin{align*}
+    E\brak{\frac{1}{X+1}} &\ge \frac{1}{E(X)+1} \\
+    \implies E\brak{\frac{1}{X+1}} &\ge \frac{1}{9 + 1} \\
+    \tag{3} \label{Part 1}
+    \implies E\brak{\frac{1}{X+1}} &\ge 0.1
+\end{align*}
+$\pr{X \ge 10}$ can be estimated by Markov's Inequality.\\
+\textbf{Markov's Inequality:}
+If X is a non-negative random variable and a $>$ 0, then the probability that X is at least a is at most the expectation of X divided by a. \\
+Mathematically,
+\begin{equation*}
+    \tag{4} \label{markov}
+    \pr{X \ge a} \le \frac{E(X)}{a}
+\end{equation*}
+by \eqref{markov} for a = 10
+\begin{align*}
+    \pr{X \ge 10} &\le \frac{E(X)}{10} \\
+    \implies \pr{X \ge 10} &\le \frac{9}{10} \\
+    \tag{5} \label{Part 2}
+   \therefore \pr{X \ge 10} &\le 0.9
+\end{align*}
+So, from \eqref{Part 1} and \eqref{Part 2} \\
+\begin{center}
+     \boxed{\textbf{Option 1 is the Correct Answer}}
+\end{center}
+\end{document}
