--- a/Challenging Problem 7/Challenging Problem.tex
+++ b/Challenging Problem 7/Challenging Problem.tex
@@ -118,7 +118,7 @@ columns=fullflexible
      \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
      \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 \vspace{3cm}
-\title{\textbf{AI1103 : Challenging Problem}}
+\title{\textbf{AI1103 : Challenging Problem 7}}
 \author{\textbf{Santosh Dhaladhuli MS20BTECH11007}}
 \maketitle
 \newpage
@@ -126,9 +126,13 @@ columns=fullflexible
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
 
-Download all latex codes from 
+Download all python codes from 
 \begin{lstlisting}
-https://github.com/Santosh-Dhaladhuli2003/AI1103/blob/main/7th%20Assignment/7th%20Assignment.tex
+https://github.com/Santosh-Dhaladhuli2003/AI1103/blob/main/Challenging%20Problem%207/challenging_problem.py
+\end{lstlisting}
+and the latex codes from
+\begin{lstlisting}
+https://github.com/Santosh-Dhaladhuli2003/AI1103/blob/main/Challenging%20Problem%207/Challenging%20Problem.tex
 \end{lstlisting}
 \section{\textbf{IES/ISS Exam statistics 2015 Q.3(c)}}
 Two Points are chosen on a line of unit length.Find the probability that each of the 3 line segments will have length greater than $\frac{1}{4}$?
